# MilkyTeadrop_Voice-Assistant

./: .gitignore  Cargo.toml  README.md  go.mod  requirements.txt
logs/: log
models/STT/: main.py  stt_model.py
models/audio-processing/: main.py  stt_model.py  tts_model.py
scripts/: start.sh
src/: main.go  main.rs
src/milkyteadrop-local/: Cargo.toml
src/milkyteadrop-local/src/: main.rs
