[package]
name = "milkyteadrop-local"
path = "milkyteadrop-local/src/main.rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avtp_protocol = "0.1.0"
base64 = "0.21.7"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
